<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_auth">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scrollview_register_layout">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="148dp"
                android:layout_height="108dp"
                android:src="@drawable/yaghaz_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollview_register_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_sheet_round"
                android:elevation="2dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/title"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner_radius"
                    android:elevation="@dimen/paddingAndMargin_16"
                    android:paddingHorizontal="@dimen/paddingAndMargin_38"
                    android:paddingTop="@dimen/paddingAndMargin_16"
                    android:paddingBottom="@dimen/paddingAndMargin_24"
                    android:text="@string/sign_up_cap"
                    android:textSize="@dimen/font_size_22"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user_name_tv"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingAndMargin_38"
                    android:layout_marginTop="64dp"
                    android:text="@string/name_"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:hint="@string/write_14_character"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
                    app:placeholderText="@string/write_14_character">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_shadow_input_layout"
                        android:cursorVisible="true"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="18dp"
                        android:paddingEnd="@dimen/paddingAndMargin_4"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_tv"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingAndMargin_38"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/userNameInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:hint="@string/write_your_email"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_tv"
                    app:placeholderText="@string/write_your_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_shadow_input_layout"
                        android:cursorVisible="true"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="18dp"
                        android:paddingEnd="@dimen/paddingAndMargin_4"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/phone_num_tv"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingAndMargin_38"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:hint="@string/write_11_numbers"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_num_tv"
                    app:placeholderText="@string/write_11_numbers">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_shadow_input_layout"
                        android:cursorVisible="true"
                        android:inputType="numberSigned"
                        android:lines="1"
                        android:paddingStart="18dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="@dimen/paddingAndMargin_4"
                        android:paddingBottom="10dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/password_tv"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingAndMargin_38"
                    android:layout_marginTop="8dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    app:endIconMode="password_toggle"
                    android:hint="@string/write_8_character_at_least"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_tv"
                    app:placeholderText="@string/write_8_character_at_least">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_shadow_input_layout"
                        android:cursorVisible="true"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingStart="18dp"
                        android:paddingEnd="@dimen/paddingAndMargin_4"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/confirm_password_tv"
                    style="@style/Headline2.Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingAndMargin_38"
                    android:layout_marginTop="8dp"
                    android:text="@string/confirm_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:hint="@string/write_your_password_again"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="4dp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_tv"
                    app:placeholderText="@string/write_your_password_again">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_shadow_input_layout"
                        android:cursorVisible="true"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingStart="18dp"
                        android:paddingEnd="@dimen/paddingAndMargin_4"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_btn"
                    style="@style/MaterialButtonStyle"
                    android:layout_width="305dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/btn_color"
                    android:fontFamily="@font/tt_commons_medium"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:cornerRadius="@dimen/radius_12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_btn">

                    <TextView
                        android:id="@+id/already_have_an_acc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/tt_commons_medium"
                        android:letterSpacing="0.04"
                        android:padding="@dimen/paddingAndMargin_4"
                        android:text="@string/have_an_account"
                        android:textColor="@color/gray_100"
                        android:textSize="@dimen/font_size_12"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tt_commons_medium"
                        android:letterSpacing="0.04"
                        android:padding="@dimen/paddingAndMargin_4"
                        android:text="@string/log_in"
                        android:textColor="@color/brown"
                        android:textSize="@dimen/font_size_12"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="@+id/already_have_an_acc"
                        app:layout_constraintStart_toEndOf="@+id/already_have_an_acc"
                        app:layout_constraintTop_toTopOf="@+id/already_have_an_acc" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
